--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "clsx": "1.2.1",
     "date-fns": "2.29.3",
     "dinero.js": "2.0.0-alpha.8",
+    "effector": "22.7.0",
+    "effector-react": "22.5.1",
     "ms": "3.0.0-canary.1",
     "next": "13.2.5-canary.21",
     "react": "18.2.0",
