--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@effector/next": "0.1.2",
     "@heroicons/react": "1.0.6",
     "@next/font": "13.2.5-canary.21",
     "@tailwindcss/forms": "0.5.3",
